--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,261 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+header{
+	height: 80px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.top-section{
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	height: 750px;
+}
+body nav a{
+	color: lightgrey;
+    text-decoration: none;
+	font-size: 23.8px;
+	width: 100%;
+	margin: 50px;
+ }
+
+h1{
+    font-size: 100px;
+	text-align: center;
+}
+#button{
+    display: block;
+    text-decoration: none;
+    color: rgb(58, 56, 56);
+	height: 45px;
+	width: 225px;
+    font-size: 23.8px;
+    text-align: center;
+    line-height: normal;
+	border: 1px solid black;
+	align-self: center;
+}
+#button:hover{
+    color: white;
+    background: rgb(58, 56, 56);
+}
+.enter{
+    display: flex;
+    height: 375px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.circle{
+	width: 33%;
+	vertical-align: middle;
+ }
+ .middle-section{
+    height: 725px;
+    width: 80%;
+    margin: 0 auto;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+ }
+ .section1{
+	 display: flex;
+ }
+ .feat{
+    margin-top: 1vw;
+    font-size: 23.8px;
+    padding: 1vw;
+    word-wrap: break-word;
+    vertical-align: middle;
+ }
+ .abo{
+    margin-top: 1vw;
+    display: inline-block;
+    font-size: 23.8px;
+    padding: 1vw;
+    word-wrap: break-word;
+    vertical-align: middle;
+}
+.section3{
+	display: flex;
+}
+.serve{
+    word-wrap: break-word;
+    padding: 1vw;
+    font-size: 23.8px;
+}
+.prod{
+    word-wrap: break-word;
+    padding: 1vw;
+    font-size: 23.8px;
+}
+.vis{
+    word-wrap: break-word;
+    padding: 1vw;
+    font-size: 23.8px;
+}
+.middle-img{
+    margin-top: 20px;
+    width: 100%;
+    height: 250px;
+    margin-bottom: 20px;
+}
+.bottom-section{
+    height: 14vw;
+    width: 80%;
+    margin: 30px auto;
+    font-size: 23.8px;
+    padding: 1vw;
+}
+.space{
+    line-height: 300%;
+}
+
+footer{
+    text-align: center;
+    font-size: 23.8px;
+}
+
+@media(max-width: 768px){
+    .circle{
+        display: none;
+    }
+    header{
+        flex-direction: column-reverse;
+    }
+    body nav a{
+        font-size: 16px;
+        margin: 25px;
+    }
+    .top-section{
+        height: 400px;
+    }
+    .enter{
+        justify-content: space-evenly;
+    }
+    h1{
+        font-size: 75px;
+    }
+}
+.serve-top{
+	display: flex;
+	height: 25vw;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-bottom: 5vw;
+	font-size: 1.75vw;
+}
+.service{
+	padding: 1vw;
+}
+.serve-middle{
+	height: 80vw;
+	border-bottom: 1px solid black;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: space-evenly;
+	flex-wrap: wrap;
+	margin-bottom: 4vw;
+	font-size: 1.70vw;
+}
+.serve-middle .box_middle{
+	height: 23vw;
+	width: 45vw;
+	background: rgb(231, 229, 229);
+	display: flex;
+	padding-left: 1vw;
+	padding-right: 1.25vw;
+	flex-direction: column;
+	justify-content: space-evenly;
+	border: 1px solid black;
+}
+.serve-button{
+	height: 3.5vw;
+	width: 15vw;
+	border: 1px solid black;
+	text-decoration: none;
+	text-align: center;
+	padding: .75vw;
+	color: black;
+}
+.serve-bottom{
+	display: flex;
+	justify-content: space-around;
+	height: 30vw;
+	margin-bottom: 5vw;
+}
+.serve-fact{
+	display: flex;
+	width: 40vw;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: space-evenly;
+	font-size: 1.75vw;
+}
+.serve-bottom img{
+	width: 40%;
+}
