--- a/css/index.css
+++ b/css/index.css
@@ -110,7 +110,8 @@ h1{
 }
 #button:hover{
     color: black;
-    background: radial-gradient(white 0%, silver 60%, black 100%);
+    border: none;
+    background: radial-gradient(silver 45%, white 75%);
 }
 .enter{
     display: flex;
