--- a/css/index.css
+++ b/css/index.css
@@ -188,6 +188,69 @@ footer{
     text-align: center;
     font-size: 23.8px;
 }
+.serve-top{
+	display: flex;
+	height: 300px;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-bottom: 5vw;
+	font-size: 1.75vw;
+}
+.service{
+	padding: 1vw;
+}
+.serve-middle{
+	height: 80vw;
+	border-bottom: 1px solid black;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: space-evenly;
+	flex-wrap: wrap;
+	margin-bottom: 4vw;
+	font-size: 1.70vw;
+}
+.serve-middle .box_middle{
+	height: 23vw;
+	width: 45vw;
+	background: rgb(231, 229, 229);
+	display: flex;
+	padding-left: 1vw;
+	padding-right: 1.25vw;
+	flex-direction: column;
+	justify-content: space-evenly;
+	border: 1px solid black;
+}
+.serve-button{
+	height: 3.5vw;
+	width: 15vw;
+	border: 1px solid black;
+	text-decoration: none;
+	text-align: center;
+	padding: .75vw;
+    color: black;
+}
+.serve-button:hover{
+        color: black;
+        border: none;
+        background: radial-gradient(silver 45%, rgb(231, 229, 229) 75%);
+}
+.serve-bottom{
+	display: flex;
+	justify-content: space-around;
+	height: 30vw;
+	margin-bottom: 5vw;
+}
+.serve-fact{
+	display: flex;
+	width: 40vw;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: space-evenly;
+	font-size: 1.75vw;
+}
+.serve-bottom img{
+	width: 40%;
+}
 @media(max-width:1200px){
     .middle-section{
         height: 800px; 
@@ -271,7 +334,14 @@ footer{
     footer{
         font-size: 13px;
     }
+    .serve-top{
+        height: 250px;
+    }
+    .services-header-img{
+        height: 150px;
+    }
 }
+
 @media(max-width: 700px){
     .middle-section{
         height: 450px;
