--- a/css/index.css
+++ b/css/index.css
@@ -194,7 +194,7 @@ footer{
 	flex-direction: column;
 	justify-content: space-between;
 	margin-bottom: 5vw;
-	font-size: 1.75vw;
+	font-size: 23.8px;
 }
 .service{
 	padding: 1vw;
@@ -207,7 +207,7 @@ footer{
 	align-items: space-evenly;
 	flex-wrap: wrap;
 	margin-bottom: 4vw;
-	font-size: 1.70vw;
+	font-size: 23.8px;
 }
 .serve-middle .box_middle{
 	height: 23vw;
@@ -246,7 +246,7 @@ footer{
 	flex-wrap: wrap;
 	flex-direction: column;
 	justify-content: space-evenly;
-	font-size: 1.75vw;
+	font-size: 23.8px;
 }
 .serve-bottom img{
 	width: 40%;
@@ -255,20 +255,34 @@ footer{
     .middle-section{
         height: 800px; 
     }
+    .serve-middle{
+        height: 1200px;
+    }
+    .serve-middle .box_middle{
+        height:350px;
+    }
 }
 @media(max-width: 1100px){
     .middle-section{
         height: 845px;
+    }
+    .serve-top{
+        height: 350px;
     }
 }
 @media(max-width:990px){
     .middle-section{
         height:875px;
     }
+    
 }
 @media(max-width: 875px){
     .middle-section{
         height:925px;
+    }
+    .serve-button{
+        width: 300px;
+        padding: .25rem;
     }
 }
 
@@ -335,7 +349,7 @@ footer{
         font-size: 13px;
     }
     .serve-top{
-        height: 250px;
+        height: 300px;
     }
     .services-header-img{
         height: 150px;
@@ -391,5 +405,33 @@ footer{
     }
     .bottom-section{
         height: 100px;
+    }
+    .serve-top{
+        height: 400px;
+    }
+    .serve-middle{
+        height: 2100px;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: none;
+    }
+    .serve-middle .box_middle{
+        width: 80%;
+        height: 335px;
+    }
+    .serve-button{
+        height: 40px;
+        align-self: center;
+    }
+    .serve-bottom{
+        height: 400px;
+        flex-direction: column;
+    }
+    .serve-fact{
+        width: 80%;
+        margin-left: 30px;
+    }
+    .services-info-img{
+        display: none;
     }
 }
